<resources>
    <string name="app_name">CatTinder</string>
    <string name="register_button">Register</string>
    <string name="login_button">Login</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="name_hint">Full name</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="logout_button">Log out</string>
    <string name="back">Back</string>
    <string name="calculate_distance">calculate distance</string>
    <string name="location_error">error</string>
    <string name="update_button">Update profile</string>
    <string name="current_password_hint">Current Password</string>
    <string name="new_password_hint">New Password</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="cat_image">Cat Image</string>
    <string name="unknown_user">Unknown User</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="open_navigation_drawer">Open navigation drawer</string>
    <string name="dislike_cat">Dislike cat</string>
    <string name="like_cat">Like cat</string>
    <string name="cat_location">Cat location</string>
    <string name="cat_name">Cat name</string>
    <string name="profile_picture">Profile picture</string>
    <string name="account">ACCOUNT</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account">Delete account</string>
</resources>