<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <!--TODO: The Cat images needs to be put here-->
    <ImageView
        android:id="@+id/cat_icon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="" />

    <EditText
        android:id="@+id/register_name_input_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cat_icon"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/name_hint"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/register_email_input_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_name_input_field"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/email_hint"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/register_password_input_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_email_input_field"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/register_confirm_password_input_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_password_input_field"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textSize="16sp" />

    <Button
        android:id="@+id/already_have_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="99dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="101dp"
        android:text="@string/already_have_account" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_confirm_password_input_field"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/register_button" />

</RelativeLayout>