<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp"
    android:orientation="vertical">

    <!--TODO: The Cat images needs to be put here-->

    <EditText
        android:id="@+id/login_email_input_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/email_hint"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/login_password_input_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/navigate_to_register_button"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:text="@string/register_button" />

        <Space
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:text="@string/login_button" />
    </LinearLayout>

</LinearLayout>