<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/left_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.DrawerFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/drawerLinearLayout2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">


                <LinearLayout
                    android:id="@+id/drawer_user_profile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#FFAF79"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <androidx.cardview.widget.CardView
                        app:cardCornerRadius="100dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/drawer_profile_picture"
                            app:srcCompat="@drawable/profile_icon"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:src="@drawable/profile_icon" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/drawer_profile_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:text="@string/unknown_user"
                        android:textColor="#FFFFFF" />
                </LinearLayout>

            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/drawer_navigate_home"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="4dp"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/drawer_navigate_home_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/home" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/drawer_navigate_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="4dp"
                app:cardBackgroundColor="#ffffff"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/drawer_navigate_profile_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/profile" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/drawer_navigate_history"
                app:cardBackgroundColor="#ffffff"
                app:cardCornerRadius="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/drawer_navigate_history_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/history" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/drawer_navigate_preferences"
                app:cardBackgroundColor="#ffffff"
                app:cardCornerRadius="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/drawer_navigate_preferences_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/settings" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>