<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/profile_open_drawer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/open_navigation_drawer"
            android:focusable="true"
            android:src="@android:drawable/ic_menu_more"
            android:translationX="6dp"
            android:translationY="6dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="24dp" />

        <LinearLayout
            android:id="@+id/drawerLinearLayoutProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp"
            android:orientation="vertical"
            android:padding="24dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:id="@+id/user_profile_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="9999dp">

                        <ImageView
                            android:id="@+id/profile_picture"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:src="@drawable/profile_icon"
                            app:srcCompat="@drawable/profile_icon"
                            android:contentDescription="@string/profile_picture" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/profile_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:gravity="center_vertical"
                        android:text="@string/unknown_user" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account"
                    android:textColor="#808080" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/sign_out_linear_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="12dp">

                            <androidx.cardview.widget.CardView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:cardCornerRadius="9999dp">

                                <ImageView
                                    android:id="@+id/imageView2"
                                    android:layout_width="32dp"
                                    android:layout_height="32dp"
                                    android:background="#FF5E5E"
                                    android:contentDescription="@string/sign_out"
                                    android:src="@android:drawable/ic_menu_close_clear_cancel"
                                    android:tintMode="screen"
                                    app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
                                    app:tint="#FF5E5E" />
                            </androidx.cardview.widget.CardView>

                            <TextView
                                android:id="@+id/sign_out_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="8dp"
                                android:text="@string/sign_out" />
                        </LinearLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="#e0e0e0">

                        </RelativeLayout>

                        <LinearLayout
                            android:id="@+id/delete_account_linear_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="12dp">

                            <androidx.cardview.widget.CardView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:cardCornerRadius="9999dp">

                                <ImageView
                                    android:id="@+id/imageView3"
                                    android:layout_width="32dp"
                                    android:layout_height="32dp"
                                    android:background="#FF5E5E"
                                    android:contentDescription="@string/delete_account"
                                    android:src="@android:drawable/ic_menu_delete"
                                    android:tintMode="screen"
                                    app:srcCompat="@android:drawable/ic_menu_delete"
                                    app:tint="#FF5E5E" />
                            </androidx.cardview.widget.CardView>

                            <TextView
                                android:id="@+id/delete_account_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="8dp"
                                android:text="@string/delete_account" />
                        </LinearLayout>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/drawer_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
